--- a/src/Components/Navigation/Navigation.css
+++ b/src/Components/Navigation/Navigation.css
@@ -3,3 +3,8 @@ nav{
     justify-content: space-between;
     margin-top: 10px;
 }
+
+.tags{
+    display: flex;
+    justify-content: space-between;
+}
